fixed overflow of text on small card

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -35,11 +35,15 @@
 }
 
 .card-small-title {
+  display: block;
+  width: 150px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   text-align: left;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: regular;
   margin: 0;
-  opacity: 1;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -52,7 +56,7 @@
 .card-small-time {
   font-size: 12px;
   margin: 4px 0 0 0;
-  padding-top: 4px;
+  padding-top: 2px;
   color: #fff;
   opacity: 1;
 }
@@ -71,8 +75,8 @@
 
 .card-small-infos .card-small-user {
   position: absolute;
-  left: 8px;
-  top: -176px;
+  left: 10px;
+  top: -178px;
   width: 32px;
 }
 
